--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Files</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
- <div class="heart"></div>
 
- <script src="index.js"></script>   
+</head>
+<body class="body">
+<section >
+    <div class="container">
+     <div class="box">
+        <video class="video" controls autoplay muted>
+            <source src="videos/vid2.mp4" type="video/mp4">
+        </video>
+     </div>
+    </div>
+
+</section>
+
+
+ <script src="app.js"></script>
 </body>
 </html>
+
+
