--- a/index.html
+++ b/index.html
@@ -5,22 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Files</title>
     <link rel="stylesheet" href="style.css">
-
+  
 </head>
 <body class="body">
+
+=
+
 <section >
+
+    <nav class="NavHeader">
+        <h1>Happy birthday M💚C 11th November</h1>
+    </nav>
+
+    <h2>💚💚💚💚💚💚💚 🐕‍🦺🐕‍🦺💚💚💚💚💚💚💚</h2>
+
+    <div id="Para">
+      <p>Glorious Thank You to all who join their Hands to help Celebrate My Birthday,
+      I never thought Banks could help, I never thought Our various Social Media Handles 
+      would help.Thanks to Google, Thanks to Zenith, Great thanks to MTN and Telecel.
+      Final thanks to Livingston, Sister Sandra, Queen, Becky and all who helped to
+      Celebrate my Birthday 10th November ... 
+      </p>
+    </div>
+    <di class="dot">
+      <dotlottie-player src="https://lottie.host/a722726f-dfcd-47ce-bd6c-bfbe58a88844/gzfF9FahX2.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
+    </di>
+   
     <div class="container">
+       
+
      <div class="box">
+
         <video class="video" controls autoplay muted>
-        <source src="videos/vid31.mp4" type="video/mp4">
+        <source src="videos/vid6.mp4" type="video/mp4">
         </video>
      </div>
+
     </div>
 
 </section>
 
 
  <script src="app.js"></script>
+ <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
 </body>
 </html>
 
