--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
      <div class="box">
 
-        <video class="video" controls autoplay muted>
+        <video class="video" controls autoplay>
         <source src="videos/vid6.mp4" type="video/mp4">
         </video>
      </div>
